<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/content_frame"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbarlayout_subnet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:liftOnScroll="false">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			app:layout_scrollFlags="noScroll"
			app:title="@string/subnet_scanner" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/subnet_scanner_progress_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:indeterminate="false"
			android:visibility="invisible"
			style="@style/Widget.Material3.LinearProgressIndicator" />

	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/textview_nonetworkconn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		android:gravity="center"
		android:textSize="24sp"
		android:includeFontPadding="false"
		app:fontFamily="@font/rubik"
		app:fontVariationSettings="'wght' 800"
		android:textStyle="italic"
		android:visibility="gone"
		android:text="@string/no_connection" />

	<LinearLayout
		android:id="@+id/linear_layout_subnet_root"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/appbarlayout_main"
		android:animateLayoutChanges="true"
		android:padding="8dp"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/local_ip_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:text="@string/your_ip_na"
				android:textSize="20sp"
				app:fontFamily="@font/rubik"
				app:fontVariationSettings="'wght' 500"
				android:includeFontPadding="false" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/devices_found_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/devices_found_na"
				android:textSize="20sp"
				app:fontFamily="@font/rubik"
				app:fontVariationSettings="'wght' 500"
				android:includeFontPadding="false" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:orientation="horizontal"
			android:gravity="center"
			android:baselineAligned="false">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/input_layout_timeout_subnet_scanner"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginEnd="2dp"
				android:hint="@string/timeout_ms">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_timeout_subnet_scanner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:imeOptions="actionGo"
					android:inputType="numberDecimal"
					android:text="3000" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/input_layout_threads_subnet_scanner"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginStart="2dp"
				android:hint="@string/threads">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_threads_subnet_scanner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:imeOptions="actionGo"
					android:inputType="numberDecimal"
					android:text="256" />

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/subnet_scan_button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginEnd="2dp"
				android:text="@string/scan"
				style="@style/Widget.Material3.Button" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/subnet_scan_cancel_button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginStart="2dp"
				android:text="@android:string/cancel"
				android:enabled="false"
				style="@style/Widget.Material3.Button" />

		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerview_subnet_devices"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="8dp"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="4dp"
			android:layout_marginBottom="4dp" />

	</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

